--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGODB_URI="mongodb+srv://hemant6988:hemant6988@cluster0.0ue1j.mongodb.net/"
+MONGODB_URI="mongodb+srv://hemant6988:hemant6988@db1.j3wl9.mongodb.net/"
